--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,8 @@ body {
 
   // Reset the user agent margin.
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 /* You can add global styles to this file, and also import other style files */
 
